Fix shape and alignment of playlist gear button
- Change shape of playlist gear button to square
- Change alignment of the menu to end

https://bugzilla.gnome.org/show_bug.cgi?id=724627

--- a/data/application.css
+++ b/data/application.css
@@ -152,7 +152,3 @@ GtkTreeView{
     font-weight: bold;
     color: mix (@theme_fg_color, @theme_bg_color, 0.50);    
 }
-
-.circle-button {
-    border-radius: 50%;
-}
